# handoff

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  DESIGN.md  README.md  justfile  pyproject.toml  release.just
.claude/: handoff-task.md  handoff.md  settings.json
.claude-plugin/: plugin.json
docs/superpowers/plans/: 2026-05-19-sessionstart-hook-loading.md  2026-05-23-pre-activation-file-guards.md  2026-06-02-anchor-multiline-display.md  2026-06-05-read-time-handoff-assembly.md  2026-06-07-autoname-skill.md  2026-06-12-gitlore-aware-handoff.md
docs/superpowers/specs/: 2026-05-19-sessionstart-hook-loading-design.md  2026-05-23-pre-activation-file-guards-design.md  2026-06-02-anchor-multiline-display-design.md  2026-06-07-autoname-skill-design.md  2026-06-12-gitlore-aware-handoff-design.md
hooks/: hooks.json
plans/: 2026-06-09-per-worktree-handoff-root-design.md  2026-06-09-per-worktree-handoff-root-plan.md  2026-06-12-handoff-trigger-parity.md  brief-install-recovery.md  bug-worktree-handoff-location.md
plugin-dev/: CLAUDE.md
scripts/: _lib.sh  _rename-lib.sh  _wipe-emit.sh  extract.py  load-handoff.sh  memory-probe.sh  prompt-pre-hook.sh  read-guard.sh  rename-when-idle.sh  set-title.sh  skill-pre-hook.sh  stop-hook.sh  worktree_root.py  write-extract.sh  write-guard.sh  write-rename.sh  write-stage.sh
skills/autoname/: SKILL.md
skills/handoff/: SKILL.md
skills/handoff/references/: design.md
skills/save/: SKILL.md
skills/save/references/: design.md
skills/setup/: SKILL.md
tests/: bats-best-practices.md  extract-test.sh  hook-test.bats  hook-test.sh  memory-probe.bats  mypy-audit.md  mypy-guidelines.md  pytest-best-practices.md  rename-test.bats  rename-test.sh  smoke.sh  test_extract.py  test_worktree_root.py
tests/fixtures/: activated-skill-bare.jsonl  activated-skill.jsonl  activated-slash.jsonl  anchor-multiline.jsonl  extract-basic.jsonl  extract-bounded.jsonl  extract-skill-meta.jsonl
